src/styles/landing.module.scss
@import "../styles/mixins";

.container {
  margin: 0 auto;
  max-width: 1140px;
  padding: 0 15px;
  width: 100%;
}

.navigationContent {
  position: relative;
  margin-left: -15px;
  margin-right: -15px;

  display: flex;
  flex: 0 1 auto;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;

  &::after {
    background-color: var(--navigation-underline-color);
    bottom: 0;
    content: "";
    height: 1px;
    left: 0;
    margin: 0 15px;
    position: absolute;
    width: calc(100% - 30px);
  }
}

.logo {
  padding: 0 15px;
  color: #00347a;
  font-size: 16px;
  font-weight: 600;
  text-transform: uppercase;
}

.navLinks {
  display: flex;
  flex: 0 1 auto;
  flex-direction: row;
  padding: 0 15px;

  a {
    color: #565b62;
    font-size: 14px;
    margin: 0 15px;
    padding: 20px 0;
    position: relative;
    white-space: nowrap;
    text-decoration: none;
    cursor: pointer;

    &:hover {
      color: var(--color-primary-set-color-1);
    }

    &:active,
    &:focus,
    &.active {
      color: var(--color-primary-set-color-2);
    }
  }
}

.banner {
  margin-top: 56px;
  background-color: rgba(0, 0, 0, 0);
  background-image: linear-gradient(
    1turn,
    rgb(242, 244, 247),
    rgba(242, 244, 247, 0) 41.35%
  );
  background-origin: padding-box;
  background-position-x: 0;
  background-position-y: 0;
  background-repeat: repeat;
  background-size: auto;
}

.bannerContent {
  width: 100%;
  height: 570px;
  display: flex;
  flex: 0 1 auto;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
}

.bannerInfo {
  flex-basis: 50%;

  & > h1 {
    margin-bottom: 20px;

    font-size: 36px;
    line-height: 44px;
    font-weight: bold;
    color: #1f1f22;

    & > span {
      & > span {
        @include primary-text;
      }
    }
  }

  & > div {
    font-size: 16px;
    line-height: 20px;
    margin-bottom: 30px;

    & > span {
      & > span {
        @include primary-text;
        font-weight: 600;
      }
    }
  }

  a {
    margin-top: 16px;
  }
}

.bannerMedia {
  flex-basis: 50%;
  max-width: 50%;
  overflow: hidden;

  video {
    max-height: 570px;
  }
}

.check {
  margin: 70px 0;
}

.checkContent {
  width: 100%;
  flex-basis: auto;
  flex-direction: column;
  align-items: center;
  flex-grow: 0;
  flex-shrink: 1;
  flex-wrap: wrap;
  font-kerning: auto;

  h2 {
    font-kerning: auto;
    font-size: 36px;
    font-weight: 700;
    height: auto;
    line-height: 44px;
    outline-color: rgb(31, 31, 34);
    text-align: center;
  }

  ul {
    margin-top: 56px;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: flex-start;
    list-style: none;
    padding: 0;
    width: 100%;

    li {
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: flex-start;
      margin: 0;
      padding: 0;
      width: 25%;

      h3 {
        margin-top: 34px;
        margin-bottom: 12px;

        font-size: 24px;
        font-weight: 600;
        height: auto;
        line-height: 30px;
        text-align: center;

        @include primary-text;
      }

      p {
        font-size: 14px;
        font-weight: 400;
        height: auto;
        line-height: 19px;
        text-align: center;
      }
    }
  }
}

.work {
  margin: 140px 0 70px;
}

.workContent {
  width: 100%;
  display: flex;
  flex: 0 1 auto;
  flex-direction: row;
  flex-wrap: wrap;
  height: 570px;
  justify-content: space-between;
  align-items: center;
}

.workInfo {
  flex-basis: 50%;

  h2 {
    font-size: 36px;
    font-weight: 700;
    height: auto;
    line-height: 44px;
  }

  ul {
    counter-reset: num;
    margin-top: 44px;

    li {
      position: relative;
      margin-bottom: 24px;
      padding-left: 40px;
      list-style: none;

      font-size: 24px;
      font-weight: 600;
      height: auto;
      line-height: 30px;

      &::before {
        content: counter(num);
        counter-increment: num 1;

        position: absolute;
        left: 3px;
        top: -1px;

        font-size: 26px;
        font-weight: 700;
        height: 28px;

        @include primary-text;
      }
    }
  }

  a {
    margin-top: 44px;
  }
}

.workMedia {
  flex-basis: 50%;
  max-width: 50%;
  overflow: hidden;

  img {
    max-width: 100%;
  }
}

.sources {
  margin: 70px 0;
}

.sourcesContent {
  width: 100%;
  flex-basis: auto;
  flex-direction: column;
  align-items: center;
  flex-grow: 0;
  flex-shrink: 1;
  flex-wrap: wrap;
  font-kerning: auto;

  h2 {
    font-kerning: auto;
    font-size: 36px;
    font-weight: 700;
    height: auto;
    line-height: 44px;
    outline-color: rgb(31, 31, 34);
    text-align: center;
  }

  ul {
    margin-top: 56px;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: flex-start;
    list-style: none;
    padding: 0;
    width: 100%;

    li {
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: flex-start;
      margin: 0;
      padding: 0;
      width: 25%;

      h3 {
        margin-top: 34px;

        font-size: 24px;
        font-weight: 600;
        height: auto;
        line-height: 30px;
        text-align: center;
      }

      & > div {
        padding: 36px;
        border-radius: 50%;
        box-shadow: 0px 1px 2px rgba(3, 7, 18, 0.01),
          0px 5px 8px rgba(3, 7, 18, 0.02), 0px 12px 18px rgba(3, 7, 18, 0.03),
          0px 20px 32px rgba(3, 7, 18, 0.04);
      }
    }
  }
}

.search {
  margin: 140px 0 70px;
}

.searchContent {
  padding: 36px;
  border-radius: 18px;
  background: #f2f4f7;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  width: 100%;

  h2 {
    margin-top: 44px;
    margin-bottom: 24px;

    font-size: 36px;
    font-weight: 700;
    height: auto;
    line-height: 44px;
  }

  form {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    width: 100%;

    input {
      margin-right: 12px;
      padding: 24px 30px;
      font-size: 18px;
      font-weight: 400;
      height: 20px;
      line-height: 20px;
      outline: none;
      width: 100%;
      border: #e7e8ec 1px solid;
      border-radius: 12px;
      background: #fff;
    }
  }
}

.faq {
  margin: 140px 0 70px;
}

.faqContent {
  width: 100%;
  flex-basis: auto;
  flex-direction: column;
  align-items: center;
  flex-grow: 0;
  flex-shrink: 1;
  flex-wrap: wrap;
  font-kerning: auto;

  h2 {
    font-kerning: auto;
    font-size: 36px;
    font-weight: 700;
    height: auto;
    line-height: 44px;
    outline-color: rgb(31, 31, 34);
    text-align: center;
  }

  & > div {
    margin-top: 50px;
  }

  summary {
    cursor: pointer;

    h4 {
      display: inline;
      font-weight: 600;
      margin-left: 10px;
      font-size: 24px;
    }
  }

  details {
    margin-top: 20px;
    padding: 20px;
    border-radius: 12px;
    background: #f2f4f7;

    p {
      margin-top: 12px;
      font-size: 16px;
      line-height: 20px;

      b {
        font-weight: 600;
      }
    }
  }
}

.footer {
  margin-top: 140px;
  background: #f2f4f7;
}

.footerContent {
  width: 100%;
  display: flex;
  flex: 0 1 auto;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: flex-start;
  padding: 36px 0;

  & > div {
    margin: 0 36px;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;

    h3 {
      font-size: 24px;
      font-weight: 600;
      height: auto;
      line-height: 30px;
    }

    p {
      font-size: 16px;
      line-height: 20px;
      color: #565b62;
    }

    &:first-child {
      margin-left: 0;
      width: 25%;
    }

    &:nth-child(2) {
      width: 50%;
    }

    &:last-child {
      margin: 20px 0;
      width: 25%;
    }
  }
}

